@@ -1,5 +1,7 @@
 === HEAD
 
+* Skip prepared statement usage in some additional cases in the prepared_statements_associations plugin (jeremyevans)
+
 * Hex escape blob input on MySQL (jeremyevans)
 
 * Handle more disconnect errors when using the postgres adapter with the postgres-pr driver (jeremyevans)
